style.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    font-family: Helvetica, sans-serif;
}



.section1, .section2, .section3, .section4 {
    display: flex;
    min-height: 300px;
}

.section1 {
    background-color: #1F2938;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0px 80px;
}
.section2 {
    background-color: white;
    flex-direction: column;
    align-items: center;
    max-height: 280px;
}
.section3 {
    background-color: #e5e7eb;
    justify-content: center;
    align-items: center;
}
.section4 {
    background-color: white;
    justify-content: center;
    align-items: center;
}



.header-container {
    display: flex;
    padding: 0px 80px;
    background-color: #1F2938;
    justify-content: space-between;
    align-items: center;
    margin: 0;
}
.header-logo, .header-links ul {
    display: flex;
}
.header-logo {
    font-size: 20px;
    padding: 16px;
    color: #f9faf8;
}
.header-links ul {
    gap: 24px;
    font-size: 14px;
}
a {
    text-decoration: none;
    color: #e5e7eb;
}
ul {
    list-style-type: none;
}

.content-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 20px;
    flex-wrap: wrap;
    margin-bottom: 30px;
}
.content-right {
    display: flex;
    background-color: lightgrey;
    align-items: center;
    justify-content: center;
    width: 300px;
    height: 150px;
    margin-top: 20px;
    border-radius: 12px;
}
.content-left h1 {
    color: white;
    margin-top: -20px;
    margin-bottom: -10px;
}
.content-left p{
    color: snow;
    max-width: 432px;
}
.sign-up-button{
    border: none;
    color: white;
    text-decoration: none;
    text-align: center;
    background-color: #3882f6;
    padding:6px 18px;
    border-radius: 8px;
    font-weight: 600;
}


.box-container,.subtext-container, .title-s2, .box {
    display: flex;
}
.title-s2 {
    justify-content: center;
    font-size: 28px;
    font-weight: 530;
    margin-top: 28px;
    margin-bottom: 22px;
}
.box-container {
    gap: 50px;
}
.box {
    background-color: white;
    width: 98px;
    height: 98px;
    border: 2px solid lightblue;
    border-radius: 25px;
}
.subtext-container {
    justify-content: center;
    gap: 51px;
    margin-bottom: 0;
}
.subtext-s2 {
    margin-top: 8px;
    font-size: 11px;
    text-align: center;
    width: 100px;
    height: 100px;
}



.testimonial-container {
    margin-top: 20px;
}
.testimonial-s3 {
    font-size: 24px;
    font-style: italic;
    max-width: 415px;
    margin-bottom: 12px;
}
.testimonial-name {
    text-align: right;
    font-size: 16px;
    font-weight: 700;
}


.call-to-action-container{
    display: flex;
    background-color: #3882f6;
    width: 750px;
    height: 130px;
    justify-content: space-between;
    padding: 0 40px;
    align-items: center;
    border-radius: 12px;
}
.content-left-s4 h1{
    margin-bottom: -10px;
    font-size: 20px;
    color: white;
}
.content-left-s4 p {
    font-size: 14px;
    color: white;
}

.content-right-s4 button {
    border: 1px solid white;
    color: white;
    text-decoration: none;
    text-align: center;
    background-color: #3882f6;
    padding:5px 18px;
    border-radius: 8px;
    font-weight: 600;
}
.content-right-s4 button:hover, .sign-up-button:hover {
    background-color: white;
    text-decoration: none;
    color: #3882f6;
}


.footer {
    display: flex;
    background-color: #1F2938;
    color: white;
    height: 50px;
    justify-content: center;
    align-items: center;
    font-size: 14px;
}

